force-app/main/default/objects/Pedidos_cabeceraSet__x/Pedidos_cabeceraSet__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>Pedidos_cabeceraSet</externalName>
    <label>Pedidos_cabeceraSet</label>
    <pluralLabel>Pedidos_cabeceraSet</pluralLabel>
</CustomObject>