force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/BillTo__c.field-meta.xml
<CustomField>
    <fullName>BillTo__c</fullName>
    <description>BillTo</description>
    <externalDeveloperName>BillTo</externalDeveloperName>
    <label>BillTo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>