force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Comis2__c.field-meta.xml
<CustomField>
    <fullName>Comis2__c</fullName>
    <description>Comis2</description>
    <externalDeveloperName>Comis2</externalDeveloperName>
    <label>Comis2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>