force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Customer</description>
    <externalDeveloperName>Customer</externalDeveloperName>
    <label>Customer</label>
    <length>10</length>
    <type>Text</type>
</CustomField>