force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Dcurr__c.field-meta.xml
<CustomField>
    <fullName>Dcurr__c</fullName>
    <description>Dcurr</description>
    <externalDeveloperName>Dcurr</externalDeveloperName>
    <label>Dcurr</label>
    <length>5</length>
    <type>Text</type>
</CustomField>