force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Ddate__c.field-meta.xml
<CustomField>
    <fullName>Ddate__c</fullName>
    <description>Ddate</description>
    <externalDeveloperName>Ddate</externalDeveloperName>
    <label>Ddate</label>
    <type>DateTime</type>
</CustomField>