force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/DestinoMerc__c.field-meta.xml
<CustomField>
    <fullName>DestinoMerc__c</fullName>
    <description>DestinoMerc</description>
    <externalDeveloperName>DestinoMerc</externalDeveloperName>
    <label>DestinoMerc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>