force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Doc__c.field-meta.xml
<CustomField>
    <fullName>Doc__c</fullName>
    <description>Doc</description>
    <externalDeveloperName>Doc</externalDeveloperName>
    <label>Doc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>