force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Dtotal__c.field-meta.xml
<CustomField>
    <fullName>Dtotal__c</fullName>
    <description>Dtotal</description>
    <externalDeveloperName>Dtotal</externalDeveloperName>
    <label>Dtotal</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>