force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Exratet__c.field-meta.xml
<CustomField>
    <fullName>Exratet__c</fullName>
    <description>Exratet</description>
    <externalDeveloperName>Exratet</externalDeveloperName>
    <label>Exratet</label>
    <length>4</length>
    <type>Text</type>
</CustomField>