force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Lnet__c.field-meta.xml
<CustomField>
    <fullName>Lnet__c</fullName>
    <description>Lnet</description>
    <externalDeveloperName>Lnet</externalDeveloperName>
    <label>Lnet</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>