force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/OpenF__c.field-meta.xml
<CustomField>
    <fullName>OpenF__c</fullName>
    <description>OpenF</description>
    <externalDeveloperName>OpenF</externalDeveloperName>
    <label>OpenF</label>
    <length>1</length>
    <type>Text</type>
</CustomField>