force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <description>Paid</description>
    <externalDeveloperName>Paid</externalDeveloperName>
    <label>Paid</label>
    <length>1</length>
    <type>Text</type>
</CustomField>