force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/PaisDestino__c.field-meta.xml
<CustomField>
    <fullName>PaisDestino__c</fullName>
    <description>PaisDestino</description>
    <externalDeveloperName>PaisDestino</externalDeveloperName>
    <label>PaisDestino</label>
    <length>3</length>
    <type>Text</type>
</CustomField>