force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Probld__c.field-meta.xml
<CustomField>
    <fullName>Probld__c</fullName>
    <description>Probld</description>
    <externalDeveloperName>Probld</externalDeveloperName>
    <label>Probld</label>
    <length>3</length>
    <type>Text</type>
</CustomField>