force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Repo1__c.field-meta.xml
<CustomField>
    <fullName>Repo1__c</fullName>
    <description>Repo1</description>
    <externalDeveloperName>Repo1</externalDeveloperName>
    <label>Repo1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>