force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Salesoffic__c.field-meta.xml
<CustomField>
    <fullName>Salesoffic__c</fullName>
    <description>Salesoffic</description>
    <externalDeveloperName>Salesoffic</externalDeveloperName>
    <label>Salesoffic</label>
    <length>4</length>
    <type>Text</type>
</CustomField>