force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Trvog__c.field-meta.xml
<CustomField>
    <fullName>Trvog__c</fullName>
    <description>Trvog</description>
    <externalDeveloperName>Trvog</externalDeveloperName>
    <label>Trvog</label>
    <length>1</length>
    <type>Text</type>
</CustomField>