force-app/main/default/objects/Pedidos_cabeceraSet__x/fields/Vbtyp__c.field-meta.xml
<CustomField>
    <fullName>Vbtyp__c</fullName>
    <description>Vbtyp</description>
    <externalDeveloperName>Vbtyp</externalDeveloperName>
    <label>Vbtyp</label>
    <length>1</length>
    <type>Text</type>
</CustomField>