force-app/main/default/objects/Pedidos_cabeceraSet__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>Ddate__c</columns>
    <columns>Distchannel__c</columns>
    <columns>Orderdate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesorg__c</field>
        <operation>equals</operation>
        <value>502</value>
    </filters>
    <filters>
        <field>Ddate__c</field>
        <operation>greaterThan</operation>
        <value>6/25/2019 12:00 AM</value>
    </filters>
    <label>All</label>
    <language>fr</language>
</ListView>